Prototype a big query output format that buffers in GCS and runs a load job to import the data.
	Change on 2016/09/27 by jcumbo <jcumbo@google.com>

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=134483891